# progpQuickJs

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  __Doc.txt  __TODO.txt  cgo.c  cgo.h  cgoBinding.c  cgoBinding.h  dynamic.c  dynamic.h  error.go  go.mod  goFunctionRegistry.go  goJsEngine.go  goQuickJsEngine.go  goRun.sh  goTaskQueue.go  goTools.go  index.js  jsEngine.go  main.c  main.cpp  progpQuick.h  quickJsEngine.c  quickJsEngine.h  runGoTest.sh  script.js
.devcontainer/: Dockerfile  devcontainer.json
goMain/: main.go
goTest/: main.go
libQuickJS/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qjs  qjsc
libQuickJS/src/examples/: hello  hello_module  test_fib
